--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.6",
     "zustand": "^4.5.2"
